adds remarks for lecture from mike’s 1995 announcement

--- a/main.tex
+++ b/main.tex
@@ -304,6 +304,7 @@ PAST END\fi%
 
 
 
+Mike's 1995 announcement is a nice read. There are many snippets you could pull out of it for use here. ``$H\Q$ serves as the target for the Todd genus, but actually the Todd genus of a manifold is an integer and it turns out that $KU$ refines the Todd genus.''  The end of section 3, with $\tau \mapsto 1/\tau$, is mysterious.  In section 4, Mike claims that there's a $BU[6, \infty)$--structured splitting principle into sums of things of the form $(1 - \L_1)(1 - \L_2)(1 - \L_3)$.  He then says that one expects the characteristic series of a $BU[6, \infty)$--genus to be a series of $3$ variables, which is nice intuition.  Could mention that $\Theta^k$ is a kind of $k${\th} difference operator, so that things in the kernel of $\Theta^k$ are ``$k${\th} order polynomials''.  If the bundle admits a symmetry operation, then the fiber over $(x, y, -x-y)$ is canonically trivialized, so a $\Sigma$--structure on a symmetric line bundle is a $\Theta^3$--structure that restricts to the identity on these canonical parts.  Mike claims (Theorem 6.2) that if $1/2 \in E^0(*)$ or if $E$ is $K(n)$--local, $n \le 2$, then $B\String^E$ is the parameter space of $\Sigma$--structures on the sheaf of functions vanishing at the identity on $G_E$.  The map $M\String \to KO_{\Tate}$ actually factors through $M\Spin$.  So, the utility of $M\String$ is only for mapping all the way to $\tmf$.
 
 Generally: if $X$ is a space, then $X_{H\F_2}$ is a scheme with an $\Aut \widehat \G_a$--action. If $X$ is a spectrum (so it fails to have a diagonal map) then $(H\F_2)_* X$ is just an $\F_2$--module, also with an $\Aut \widehat \G_a$--action.
 
