--- a/sigma.tex
+++ b/sigma.tex
@@ -15,6 +15,8 @@
 
 The analysis of $BSU_K$, purely in terms of special divisors.
 
+The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structures
+
 
 I'm not sure what story I mean to tell on this day.  I want to get some low-order version of the story out of the way, to use as a template for the topological side of things.
 
