removes some stuff from the ‘material for lecture’ section

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -149,6 +149,8 @@ Restricting to additive cooperations: the indecomposable quotient
 
 The homology suspension element, the relation $e \circ e = b_{(0)}$, and passing to the stabilization
 
+\todo{Neil's MO answer about $H_* K(\Z, 3)$}
+
 
 -----
 
