--- a/quillen.tex
+++ b/quillen.tex
@@ -102,7 +102,7 @@ A formal group is a formal variety endowed with an abelian group structure.\foot
 As with formal schemes, formal groups can arise as formal completions of an algebraic group at its identity point.  It turns out that there are many more formal groups than come from this procedure, a phenomenon that will be of keen interest to us.
 \end{remark}
 
-\begin{definition}
+\begin{definition}\label{FGLDefinition}
 Let $\G$ be a formal group.  In the presence of a coordinate $\phi \co \G \cong \A^n$, the addition law on $\G$ begets a map
 \begin{center}
 \begin{tikzcd}
